--- a/composer.json
+++ b/composer.json
@@ -24,15 +24,15 @@
     "ext-simplexml": "*",
 
     "a2lix/translation-form-bundle": "^3.0",
-    "beberlei/DoctrineExtensions": "^1.0",
-    "broadway/broadway": "^2.0.1",
+    "beberlei/doctrineextensions": "^1.0",
+    "broadway/broadway": "2.0.0",
     "broadway/broadway-bundle": "^0.4.1",
     "broadway/uuid-generator": "^0.4.0",
     "broadway/read-model-elasticsearch": "^0.3.0",
     "broadway/event-store-dbal": "^0.2.0",
     "broadway/snapshotting": "^0.2.0",
-    "doctrine/orm": "^2.5",
-    "doctrine/doctrine-bundle": "^1.6",
+    "doctrine/orm": "^2.7",
+    "doctrine/doctrine-bundle": "^1.12",
     "doctrine/doctrine-cache-bundle": "^1.2",
     "doctrine/doctrine-fixtures-bundle": "^2.3",
     "elasticsearch/elasticsearch": "^5.0",
@@ -60,7 +60,7 @@
     "sensio/distribution-bundle": "^5.0",
     "sensio/framework-extra-bundle": "^3.0.2",
     "sensio/generator-bundle": "^3.0",
-    "symfony/symfony": "3.4.14",
+    "symfony/symfony": "3.4.*",
     "symfony/monolog-bundle": "^2.8",
     "symfony/polyfill-apcu": "^1.0",
     "symfony/swiftmailer-bundle": "^2.3",
